--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
 </head>
-<body class="mat-typography">
+<body class="mat-typography" role="main">
   <app-root></app-root>
 </body>
 </html>
